[gd_scene load_steps=17 format=3 uid="uid://wietinuv8icg"]

[ext_resource type="Script" path="res://Scenes/Two Player.gd" id="1_iyqbi"]
[ext_resource type="Texture2D" uid="uid://c4yr0bnwnsud6" path="res://arts/Board.png" id="2_vwmi6"]
[ext_resource type="Texture2D" uid="uid://dj4xc4cfru1jb" path="res://arts/ScoreBar.png" id="3_kqkhj"]
[ext_resource type="Script" path="res://Scenes/Player.gd" id="4_tykwu"]
[ext_resource type="Texture2D" uid="uid://cf7mdl3lohnlw" path="res://arts/Player.png" id="5_hv7c8"]
[ext_resource type="Script" path="res://Scenes/Player Two.gd" id="6_20tgf"]
[ext_resource type="Texture2D" uid="uid://cp1y7wbsofji6" path="res://arts/Computer.png" id="7_xlo7o"]
[ext_resource type="PackedScene" uid="uid://ylcoydblj8sl" path="res://Scenes/ball.tscn" id="8_47nrv"]
[ext_resource type="AudioStream" uid="uid://bf273q10gh8xq" path="res://Music/Fruit collect 1.wav" id="9_1nunj"]
[ext_resource type="Texture2D" uid="uid://dg3fn5segyedg" path="res://arts/New_arrows.png" id="11_h6ww5"]
[ext_resource type="PackedScene" uid="uid://de0qx38iy7if7" path="res://Scenes/Menu_For_Android.tscn" id="12_38hhl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvd25"]
bg_color = Color(0.6, 0.188235, 0.478431, 1)
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_anc4o"]
Button/styles/focus = SubResource("StyleBoxFlat_jvd25")
Button/styles/hover = SubResource("StyleBoxFlat_jvd25")
Button/styles/normal = SubResource("StyleBoxFlat_jvd25")
Button/styles/pressed = SubResource("StyleBoxFlat_jvd25")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_16ddj"]
a = Vector2(1920, 0)
b = Vector2(0, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_xxwqg"]
a = Vector2(1920, 0)
b = Vector2(0, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_7wbel"]
b = Vector2(0, 1032)

[node name="Game" type="Node2D"]
script = ExtResource("1_iyqbi")

[node name="Board" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1922.0
offset_bottom = 1078.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_vwmi6")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HFlowContainer" type="HFlowContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 51.0
grow_horizontal = 2

[node name="Left Score Container" type="HBoxContainer" parent="HUD/HFlowContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left Score" type="TextureRect" parent="HUD/HFlowContainer/Left Score Container"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_kqkhj")

[node name="Label" type="Label" parent="HUD/HFlowContainer/Left Score Container/Left Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -11.5
offset_right = 68.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Player One Score:"

[node name="Menu Button" type="Button" parent="HUD/HFlowContainer"]
layout_mode = 2
theme = SubResource("Theme_anc4o")
theme_override_font_sizes/font_size = 40
text = "Menu"

[node name="Right Score Container" type="HBoxContainer" parent="HUD/HFlowContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Right Score" type="TextureRect" parent="HUD/HFlowContainer/Right Score Container"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_kqkhj")
flip_h = true

[node name="Label" type="Label" parent="HUD/HFlowContainer/Right Score Container/Right Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -11.5
offset_right = 68.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Player Two Score:"

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(260, 520)
motion_mode = 1
floor_stop_on_slope = false
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("4_tykwu")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("5_hv7c8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
polygon = PackedVector2Array(8.5, -56.6, 8.5, 56, 5.1, 60, -8.5, 60, -8.5, -60, 4.5, -60)

[node name="Player Two" type="CharacterBody2D" parent="."]
position = Vector2(1665, 520)
motion_mode = 1
floor_stop_on_slope = false
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("6_20tgf")

[node name="Sprite2D" type="Sprite2D" parent="Player Two"]
texture = ExtResource("7_xlo7o")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Player Two"]
polygon = PackedVector2Array(8.5, 60, -5.3, 60, -8.5, 56.8, -8.5, -56, -4.5, -59.8, 8.5, -60)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, 60)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_16ddj")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(0, 1080)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource("SegmentShape2D_xxwqg")

[node name="Left Border" type="Area2D" parent="."]
position = Vector2(210, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Border"]
shape = SubResource("SegmentShape2D_7wbel")

[node name="Right Border" type="Area2D" parent="."]
position = Vector2(1710, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Border"]
shape = SubResource("SegmentShape2D_7wbel")

[node name="Ball" parent="." instance=ExtResource("8_47nrv")]

[node name="Score" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_1nunj")

[node name="Up Arrow" type="TouchScreenButton" parent="."]
position = Vector2(0, 65)
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("11_h6ww5")
texture_pressed = ExtResource("11_h6ww5")
action = "W"

[node name="P2 - Up Arrow" type="TouchScreenButton" parent="."]
position = Vector2(1715, 65)
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("11_h6ww5")
texture_pressed = ExtResource("11_h6ww5")
action = "Up"

[node name="Down Arrow" type="TouchScreenButton" parent="."]
position = Vector2(206, 1080)
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("11_h6ww5")
texture_pressed = ExtResource("11_h6ww5")
action = "S"

[node name="P2 - Down Arrow" type="TouchScreenButton" parent="."]
position = Vector2(1920, 1080)
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("11_h6ww5")
texture_pressed = ExtResource("11_h6ww5")
action = "Down"

[node name="MenuForAndroid" parent="." instance=ExtResource("12_38hhl")]

[connection signal="pressed" from="HUD/HFlowContainer/Menu Button" to="." method="_on_menu_button_pressed"]
[connection signal="body_entered" from="Left Border" to="." method="_on_left_border_body_entered"]
[connection signal="body_entered" from="Right Border" to="." method="_on_right_border_body_entered"]
